[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentgit"
version = "0.1.0"
description = "Git for AI Thoughts — Checkpointing & Recovery Protocol for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentGit Contributors"},
]
keywords = [
    "ai", "agents", "checkpointing", "recovery", "state-management",
    "llm", "reasoning", "rollback", "branching",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agentgit = "agentgit.cli:main"

[project.urls]
Homepage = "https://github.com/agentgit/agentgit"
Documentation = "https://agentgit.readthedocs.io"
Repository = "https://github.com/agentgit/agentgit"
Issues = "https://github.com/agentgit/agentgit/issues"

[tool.setuptools.packages.find]
include = ["agentgit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
