[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstateprotocol"
version = "0.1.0"
description = "Checkpointing and recovery protocol for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentStateProtocol Contributors"},
]
keywords = [
    "ai", "agents", "checkpointing", "recovery", "state-management",
    "llm", "reasoning", "rollback", "branching",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agentstateprotocol = "agentstateprotocol.cli:main"

[project.urls]
Homepage = "https://github.com/ekessh/agentstateprotocol"
Documentation = "https://agentstateprotocol.readthedocs.io"
Repository = "https://github.com/ekessh/agentstateprotocol"
Issues = "https://github.com/ekessh/agentstateprotocol/issues"

[tool.setuptools.packages.find]
include = ["agentstateprotocol*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"